--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "homepage": "https://github.com/kemitchell/indexeddb-aol.js",
   "devDependencies": {
     "browserify": "^16.1.1",
+    "standard": "^11.0.1",
+    "standard-markdown": "^4.0.2",
     "tape": "^4.8.0"
   },
   "scripts": {
-    "pretest": "browserify test.js > test.browser.js"
+    "pretest": "browserify test.js > test.browser.js",
+    "lint": "standard && standard-markdown"
   },
   "license": "SEE LICENSE IN LICENSE",
   "licensezero": [
